--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
 		"prettier": "prettier --config ./node_modules/monkey-labs-config/.prettierrc.json --write ."
 	},
 	"dependencies": {
+		"@3d-dice/dice-box-threejs": "^0.0.12",
+		"@react-three/drei": "^9.74.15",
+		"@react-three/fiber": "^8.13.3",
 		"@types/node": "20.2.5",
 		"@types/react": "18.2.8",
 		"@types/react-dom": "18.2.4",
 		"autoprefixer": "10.4.14",
+		"classnames": "^2.3.2",
 		"eslint": "8.42.0",
 		"eslint-config-next": "13.4.4",
 		"langchain": "^0.0.92",
