--- a/package.json
+++ b/package.json
@@ -20,18 +20,33 @@
 		"classnames": "^2.3.2",
 		"eslint": "8.42.0",
 		"eslint-config-next": "13.4.4",
+		"html2canvas": "^1.4.1",
 		"langchain": "^0.0.92",
 		"next": "13.4.4",
 		"postcss": "8.4.24",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"recordrtc": "^5.6.2",
 		"sass": "^1.62.1",
 		"sentence-splitter": "^4.2.1",
+		"simple-peer": "^9.11.1",
 		"tsx": "^3.12.7",
 		"typescript": "5.1.3",
+		"video-react": "^0.16.0",
+		"ws": "^8.13.0",
 		"zustand": "^4.3.8"
 	},
 	"devDependencies": {
+		"@antmedia/webrtc_adaptor": "^2.5.1",
+		"@babel/core": "^7.22.5",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+		"@babel/preset-env": "^7.22.5",
+		"@babel/preset-react": "^7.22.5",
+		"@babel/preset-typescript": "^7.22.5",
+		"@types/recordrtc": "^5.6.11",
+		"@types/ws": "^8.5.5",
+		"babel-loader": "^9.1.2",
 		"monkey-labs-config": "github:48Chromosomes/monkey-labs-config",
 		"prettier": "^2.8.8",
 		"stylelint": "^15.7.0"
